14291 cxgbe: asserts when requesting more queues than available Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Ryan Zezeski <ryan@oxide.computer> Approved by: Robert Mustacchi <rm@fingolfin.org>